simplified of methods